--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </div>
   </header>
 
+  <img src="images/Blastoise1.png" alt="Screenshot of app" style="max-width:100%;height:auto;display:block;">
+
+
   <main class="container">
     <section id="about" class="card">
       <h2>About</h2>
