--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="site-header">
     <div class="container">
       <h1>Trizzle Pokemon VGC Resources</h1>
-      <p class="tagline">Short one-line summary of what this project does.</p>
+      <p class="tagline">A Collection of useful resources and links to help with the VGC Circuit</p>
       <nav class="nav">
         <a href="#about">About</a>
         <a href="#demo">Demo</a>
