--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+  <!--THIS IS THE WEBPAGE TITLE-->
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -7,15 +8,18 @@
   <link rel="stylesheet" href="Styles.css" />
   <meta name="description" content="A Place for all things VGC" />
 </head>
+
+  
 <body>
+  
   <header class="site-header">
     <div class="container">
       <h1>Pokemon VGC Dashboard</h1>
       <p class="tagline">A Collection of useful resources and links to help with the Pokemon VGC Circuit</p>
       <nav class="nav">
-        <!--<a href="#about">About</a>
+        <a href="#about">About</a>
         <a href="#demo">Demo</a>
-        <a href="#contact">Contact</a>-->
+        <a href="#contact">Contact</a>
       </nav>
     </div>
   </header>
