--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     
   </header>
 
-  <nav class="nav">
+  <!--<nav class="nav">
       <a href="#about">About</a>
       <a href="#demo">Demo</a>
       <a href="#contact">Contact</a>  
-    </nav>
+    </nav>-->
   
   <main class="container">
     <section id="about" class="card">
