--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p><a class="btn" href="https://www.pokemon.com/us/play-pokemon/leaderboards/" target="_blank" rel="noopener">Play! Pokemon Leaderboards</a></p>
       <p><a class="btn" href="https://events.pokemon.com/en-us/events" target="_blank" rel="noopener">Pokemon Event Locator</a></p>
       <p><a class="btn" href="https://dhsufi.github.io/PokemonTeamListCreator/" target="_blank" rel="noopener">Team Sheet Generator</a></p>
-      <p><a class="btn" href="https://VictoryRoad.Pro" target="_blank" rel="noopener">Victory Road</a></p>
+      <p><a class="btn" href="https://www.pokemon.com/us/pokemon-trainer-club/play-pokemon-stats/history/" target="_blank" rel="noopener">Championship Points History</a></p>
       <p><a class="btn" href="https://www.pokedata.ovh/standingsVGC/" target="_blank" rel="noopener">Pokedata VGC Standings</a></p>
       <p><a class="btn" href="https://rk9.gg/" target="_blank" rel="noopener">RK9.gg</a></p>
     </section>
@@ -72,6 +72,7 @@
       <p><a class="btn" href="https://bulbapedia.bulbagarden.net/wiki/Main_Page" target="_blank" rel="noopener">Bulbapedia</a></p>
       <p><a class="btn" href="https://discord.com/channels/485342420100186112/@home" target="_blank" rel="noopener">NZ VGC Discord Server</a></p>
       <p><a class="btn" href="https://www.reddit.com/r/VGC/" target="_blank" rel="noopener">Main VGC Subreddit</a></p>
+      <p><a class="btn" href="https://VictoryRoad.Pro" target="_blank" rel="noopener">Victory Road</a></p>
     </section>
       
     </div>
