--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
       <p><a class="btn" href="https://labmaus.net/tournaments" target="_blank" rel="noopener">LabMaus</a></p>
       <p><a class="btn" href="https://Munchstats.com" target="_blank" rel="noopener">Munchstats</a></p>
       <p><a class="btn" href="https://Serebii.Net" target="_blank" rel="noopener">Serebii</a></p>
+      <p><a class="btn" href="https://docs.google.com/spreadsheets/d/1axlwmzPA49rYkqXh7zHvAtSP-TKbM0ijGYBPRflLSWw/edit?gid=1837599752#gid=1837599752" target="_blank" rel="noopener">VGCPastes Respository</a></p>
+      
     </section>
 
     <section id="Tournament" class="card">
@@ -81,7 +83,7 @@
   <footer class="site-footer">
     <div class="container">
       <!--<small>© <span id="year"></span> Your Name — <a href="https://github.com/your-username/your-repo">Repository</a></small>-->
-      <p>Last Edited: 11.11.2025 - Cooltrizzle</p>
+      <p>Last Edited: 13.11.2025 - Cooltrizzle</p>
     </div>
   </footer>
 
