--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <p>
         <a class="btn" href="https://bulbapedia.bulbagarden.net/wiki/Main_Page" target="_blank" rel="noopener">
           <img src="https://ahost2.bulbagarden.net/content/bulbagarden/images/bulb-green-orig.png" alt="" class="btn-icon" aria-hidden="true">
-          Bulbapedia
+          <span class="btn-label">Bulbapedia</span>
         </a>
       </p>
       <p><a class="btn" href="https://discord.com/channels/485342420100186112/@home" target="_blank" rel="noopener">NZ VGC Discord Server</a></p>
